<?xml version="1.0" encoding="utf-8"?>

<resources>

    <!--
    ===========================================================================================
    
    g_APP_NAME         = Replace with your own application name.
    g_ADS_COMPANY_NAME = Replace with your own company name.

    g_ADS_UNIT_ID      = Replace with your own AdSense client ID.
    					 "ca-mb-app-pub-nnnnnnnnnnnnnnnn".
                         production: ca-pub-7837586323702893
                         test mode.: 000000000000000
    g_ADS_KEYWORDS     = Replace with your own keywords used to target Google ad.
                         Join multiple words in a phrase with '+' and join multiple phrases with ','.
	g_ADS_CHANNEL_ID   = Replace with your own AdSense channel ID.
	g_ADS_TEST_DEVICES = Replace with your own test devices.

    ===========================================================================================	-->

    <string name="g_APP_NAME">Questões Grátis</string>

    <string name="g_ADS_COMPANY_NAME">Anaximandro de Godinho</string>
    <string name="g_ADS_UNIT_ID">ca-pub-7837586323702893</string>
    <string name="g_ADS_KEYWORDS">exames,testes,preparatórios</string>
    <string name="g_ADS_CHANNEL_ID">exames,testes,preparatórios</string>
    <string name="g_ADS_TEST_DEVICES">TEST_EMULATOR, emulator-5554</string>

    <string name="g_BACK">Voltar</string>
    <string name="g_FIRST">Primeira</string>
    <string name="g_PREVIOUS">Anterior</string>
    <string name="g_NEXT">Próxima</string>
    <string name="g_LAST">Última</string>
    <string name="g_FINISH">Finalizar</string>
    <string name="g_ALL_MALE">TODOS</string>
    <string name="g_ALL_FEMALE">TODAS</string>

    <string name="menu_create">Novo Simulado</string>
    <string name="menu_quizzes">Meus Simulados</string>
    <string name="menu_more">Mais Questões</string>
    <string name="menu_about">Sobre Nós</string>

    <string name="create_title">Selecione os filtros desejados:</string>
    <string name="create_ignore_none"> Considerar TODAS Questões</string>
    <string name="create_ignore_answered"> Ignorar Questões Já Respondidas</string>
    <string name="create_ignore_right"> Ignorar Questões Corretas</string>
    <string name="create_ignore_wrong"> Ignorar Questões Incorretas</string>
    <string name="create_total">Quantidade de questões:</string>
    <string name="create_banca">Banca</string>
    <string name="create_ano">Ano</string>
    <string name="create_orgao">Órgão</string>
    <string name="create_uf">UF</string>
    <string name="create_cargo">Cargo</string>
    <string name="create_disciplina">Disciplina</string>
    <string name="create_assunto">Assunto</string>
    <string name="create_no_data">Não há questões que atendam ao filtro selecionado, por favor, altere o filtro e tente novamente …</string>
    <string name="create_wait">Aguarde, criando novo questionário …</string>

    <string name="answers_title">Simulado:</string>
    <string name="answers_item_image">Conclusão</string>

    <string name="answer_confirm_complete">Deseja finalizar o simulado? O simulado não pode ser alterado depois de finalizado.</string>
    <string name="answer_confirm_incomplete">Ainda há questões não respondidas, deseja realmente finalizar o simulado?</string>
    
    <string name="quizzes_title">Meus Simulados:</string>
    <string name="quizzes_empty">Não há simulados …</string>
    
    <string name="more_title">Mais Questões:</string>
    <string name="more_uri">http://www.questoesGratis.com.br</string>

    <string name="about_title">Sobre Nós:</string>
    <string name="about_feedback_label">Críticas, problemas, idéias ou sugestões?</string>
    <string name="about_feedback_action">Email desenvolvedor</string>
    <string name="about_feedback_email">johnDoe@somewhere.com</string>
    <string name="about_feedback_subject">Feedback do Questões Grátis</string>
    <string name="about_feedback_text">Qual o seu telefone?\n%s\n\nSeu feedback aqui:\n</string>
    
    <string name="about_market_label">Gostou do Questões Grátis?</string>
    <string name="about_market_action">Vote no Android Market</string>
    <string name="about_market_uri">market://details?id=com.gec.questoesGratis</string>

    <string name="about_web_label">Veja nossos planos:</string>
    <string name="about_web_action">Visite o website</string>
    <string name="about_web_uri">http://www.questoesGratis.com.br</string>

    <string name="about_created_by">Escrito por</string>
    <string name="about_gec">G&amp;C Consultoria e Informática Ltda.</string>
    <string name="about_opensource_under">Open-sourced under</string>
    <string name="about_apache_20">Apache 2.0 License</string>

</resources>