<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/ActionBarCompat" />

    <TextView
        style="@style/Title"
        android:text="@string/create_title" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:padding="@dimen/padding" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/padding" >

            <RadioGroup
                android:id="@+id/create_ignore_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/create_ignore_none"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_ignore_none"
                    android:checked="true" />
                <RadioButton
                    android:id="@+id/create_ignore_answered"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_ignore_answered" />
                <RadioButton
                    android:id="@+id/create_ignore_right"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_ignore_right" />
                <RadioButton
                    android:id="@+id/create_ignore_wrong"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_ignore_wrong" />
            </RadioGroup>

            <TextView
                style="@style/TextView"
                android:layout_marginTop="10dp"
                android:text="@string/create_total" />

            <SeekBar
                android:id="@+id/create_total"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="50"
                android:progress="50" />

            <TextView
                style="@style/TextView"
                android:layout_marginTop="10dp"
                android:text="@string/create_title" />

            <TextView
                style="@style/TextView"
                android:layout_marginTop="10dp"
                android:text="@string/create_uf" />

            <com.gec.questoesGratis.widgets.MultiSpinner
                android:id="@+id/create_ms_uf"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextView"
                android:layout_marginTop="10dp"
                android:text="@string/create_banca" />

            <com.gec.questoesGratis.widgets.MultiSpinner
                android:id="@+id/create_ms_banca"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextView"
                android:layout_marginTop="10dp"
                android:text="@string/create_orgao" />

            <com.gec.questoesGratis.widgets.MultiSpinner
                android:id="@+id/create_ms_orgao"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextView"
                android:layout_marginTop="10dp"
                android:text="@string/create_cargo" />

            <com.gec.questoesGratis.widgets.MultiSpinner
                android:id="@+id/create_ms_cargo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextView"
                android:layout_marginTop="10dp"
                android:text="@string/create_ano" />

            <com.gec.questoesGratis.widgets.MultiSpinner
                android:id="@+id/create_ms_ano"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextView"
                android:layout_marginTop="10dp"
                android:text="@string/create_disciplina" />

            <com.gec.questoesGratis.widgets.MultiSpinner
                android:id="@+id/create_ms_disciplina"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextView"
                android:layout_marginTop="10dp"
                android:text="@string/create_assunto" />

            <com.gec.questoesGratis.widgets.MultiSpinner
                android:id="@+id/create_ms_assunto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            style="@style/Button"
            android:onClick="onClick_PREVIOUS"
            android:text="@string/g_PREVIOUS" />

        <Button
            style="@style/Button"
            android:onClick="onClick_NEXT"
            android:text="@string/g_NEXT" />
    </LinearLayout>

</LinearLayout>