<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/ActionBarCompat" />
    
    <android.support.v4.view.ViewPager
        android:id="@+id/answer_pager"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >
        <Button
            android:id="@+id/answer_first"
            style="@style/NavButton"
            android:onClick="onClick_FIRST"
            android:text="@string/g_FIRST" />
        <Button
            android:id="@+id/answer_previous"
            style="@style/NavButton"
            android:onClick="onClick_PREVIOUS"
            android:text="@string/g_PREVIOUS" />
        <Button
            android:id="@+id/answer_next"
            style="@style/NavButton"
            android:onClick="onClick_NEXT"
            android:text="@string/g_NEXT" />
        <Button
            android:id="@+id/answer_last"
            style="@style/NavButton"
            android:onClick="onClick_LAST"
            android:text="@string/g_LAST" />

        <Button
            android:id="@+id/answer_finish"
            style="@style/ImportantButton"
            android:onClick="onClick_FINISH"
            android:text="@string/g_FINISH" />
        </LinearLayout>

</LinearLayout>